--- a/.github/workflows/tseting.yaml
+++ b/.github/workflows/tseting.yaml
@@ -18,10 +18,11 @@ jobs:
           echo "{readme_content}={$readme_content}" >> $GITHUB_OUTPUT
       - name: Modify README content
         run: |
-          new_content=$(echo "${{ steps.read_readme.outputs.readme_content }}" | sed 's/old_text/new_text/g')
-          echo "$new_content" > README.md
+          new_content="${{ steps.read_readme.outputs.readme_content }}"
+          new_content+="\nThis is a new line added at the end."
+          echo -e "$new_content" > README.md
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
           git add README.md
-          git commit -m "Update README content"
+          git commit -m "Append content to README"
           git push
