--- a/.github/workflows/tseting.yaml
+++ b/.github/workflows/tseting.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Modify README content
         run: |
           new_content="${{ steps.read_readme.outputs.readme_content }}"
-          new_content+="\nThis is a new line added at the end."
+          new_content+="\nThis is a new line added at the end. Last edited by: ${GITHUB_ACTOR}"
           echo -e "$new_content" > README.md
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
