hope it's the final tset

--- a/.github/workflows/tseting.yaml
+++ b/.github/workflows/tseting.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Read README content
         id: read_readme
         run: |
-          readme_content=$(<README.md)
+          readme_content=$(cat README.md)
           echo "{readme_content}={$readme_content}" >> $GITHUB_OUTPUT
       - name: Modify README content
         run: |
