--- a/.github/workflows/DockerLogin.yml
+++ b/.github/workflows/DockerLogin.yml
@@ -12,3 +12,9 @@ jobs:
               with:
                   username: ${{ secrets.DOCKER_USERNAME}}
                   password: ${{ secrets.DOCKER_ACCESS_TOKEN}}
+            - name: Build and push to docker
+              uses: docker/build-push-action@v2
+              with:
+                  context: .
+                  push: true
+                  tags: eanzo24/nginx:latest, eanzo24/nginx:${{ github.run_number }}
