--- a/.github/workflows/DockerLogin.yml
+++ b/.github/workflows/DockerLogin.yml
@@ -15,6 +15,6 @@ jobs:
             - name: Build and push to docker
               uses: docker/build-push-action@v2
               with:
-                  context: .
+                  context: /
                   push: true
                   tags: eanzo24/nginx:latest, eanzo24/nginx:${{ github.run_number }}
