--- a/.github/workflows/DockerLogin.yml
+++ b/.github/workflows/DockerLogin.yml
@@ -12,9 +12,15 @@ jobs:
               with:
                   username: ${{ secrets.DOCKER_USERNAME}}
                   password: ${{ secrets.DOCKER_ACCESS_TOKEN}}
-            - name: Build and push to docker
-              uses: docker/build-push-action@v2
-              with:
-                  context: /
-                  push: true
-                  tags: eanzo24/nginx:latest, eanzo24/nginx:${{ github.run_number }}
+            - name: Build Docker image
+              run: |
+                docker build -t eanzo24/nginx:latest .
+            - name: Push Docker image to Docker Hub
+              run: |
+                docker push yourusername/yourimage:latest
+#            - name: Build and push to docker
+#              uses: docker/build-push-action@v2
+#              with:
+#                  context: /
+#                  push: true
+#                  tags: eanzo24/nginx:latest, eanzo24/nginx:${{ github.run_number }}
