--- a/.github/workflows/DockerLogin.yml
+++ b/.github/workflows/DockerLogin.yml
@@ -14,10 +14,10 @@ jobs:
                   password: ${{ secrets.DOCKER_ACCESS_TOKEN}}
             - name: Build Docker image
               run: |
-                docker build -t eanzo24/nginx:latest .
+                docker build -t eanzo24/nginx:latest /
             - name: Push Docker image to Docker Hub
               run: |
-                docker push yourusername/yourimage:latest
+                docker push eanzo24/nginx:latest
 #            - name: Build and push to docker
 #              uses: docker/build-push-action@v2
 #              with:
