--- a/.github/workflows/DockerLogin.yml
+++ b/.github/workflows/DockerLogin.yml
@@ -12,12 +12,17 @@ jobs:
               with:
                   username: ${{ secrets.DOCKER_USERNAME}}
                   password: ${{ secrets.DOCKER_ACCESS_TOKEN}}
-            - name: Build Docker image
+            - name: Pull Nginx image
               run: |
-                docker build -t eanzo24/nginx:latest /
-            - name: Push Docker image to Docker Hub
+                docker pull nginx:latest
+
+            - name: Tag Nginx image
               run: |
-                docker push eanzo24/nginx:latest
+                docker tag nginx:latest eanzo24/nginx:latest 
+
+            - name: Push Nginx image to Docker Hub
+              run: |
+                docker push eanzo24/nginx:latest  
 #            - name: Build and push to docker
 #              uses: docker/build-push-action@v2
 #              with:
