--- a/.github/workflows/ReadmeStuff.yaml
+++ b/.github/workflows/ReadmeStuff.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Modify README content
         run: |
           new_content="${{ steps.read_readme.outputs.readme_content }}"
-          new_content+="\n\nThis is a new line added at the end. Last edited by: ${GITHUB_ACTOR}"
+          new_content+="\n\nThis is a new line added at the end. Last edited by: ${GITHUB_ACTOR} ,with Github Run_Number :${{ github.run_number }}"
           echo -e "$new_content" > README.md
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
