--- a/.github/workflows/generate ascii.yml
+++ b/.github/workflows/generate ascii.yml
@@ -11,7 +11,7 @@ jobs :
               run: sudo apt-get install cowsay -y
 
             - name: Excute cowsay CMD
-              run: cowsay -f dragon "Run for cover, iam a Dragon... .RAWR" dragon.txt
+              run: cowsay -f dragon "Run for cover, iam a Dragon... .RAWR" >> dragon.txt
             
             - name: Test File Exists
               run: grep -i "dragon" dragon.txt
